--- a/mods/nmc-discord-bridge.pw.toml
+++ b/mods/nmc-discord-bridge.pw.toml
@@ -3,6 +3,6 @@ filename = "nmc-discord-bridge-0.0.1.jar"
 side = "server"
 
 [download]
-url = "https://raw.githubusercontent.com/Atakku/neko.mc-mods/main/nmc-discord-bridge-0.0.1.jar"
+url = "https://raw.githubusercontent.com/nekosmp/nsmp-mods/main/nmc-discord-bridge-0.0.1.jar"
 hash-format = "sha1"
 hash = "41e6c917f8bf9eec34fab82a7d12dedff2fd3edd"
