--- a/mods/create-track-map.pw.toml
+++ b/mods/create-track-map.pw.toml
@@ -1,6 +1,6 @@
 name = "Create Track Map"
 filename = "create-track-map-1.0+mc1.19.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/gxoNIjg6/versions/qUjynpZr/create-track-map-1.0%2Bmc1.19.2.jar"
