--- a/mods/fancymenu.pw.toml
+++ b/mods/fancymenu.pw.toml
@@ -1,11 +1,16 @@
 name = "FancyMenu"
 filename = "fancymenu_fabric_2.14.2_MC_1.19-1.19.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/LbjlNn6Z/fancymenu_fabric_2.14.2_MC_1.19-1.19.2.jar"
 hash-format = "sha1"
 hash = "2c1b46e9502b3975d2f84f5719314082eb14ba84"
+
+[option]
+optional = true
+default = true
+description = "Performance impact: None\n\nDescription: FancyMenu is a client-side Minecraft mod to customize ingame menus and the first mod ever with a fully functional ingame menu editor GUI to edit your menu screens without leaving the game!"
 
 [update]
 [update.modrinth]
