--- a/mods/tooltipfix.pw.toml
+++ b/mods/tooltipfix.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "a5693f4886c190cc7bd66afdff063ebe333b2d6c"
 
 [option]
-optional = false
+optional = true
 default = true
 description = "Performance impact: None\n\nDescription: Fixes Tooltips from runnning off the screen."
 
