--- a/mods/boat-item-view.pw.toml
+++ b/mods/boat-item-view.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "8f0540293306a2b514b9d2229c88b27ad48ffe3d"
 
 [option]
-optional = false
+optional = true
 default = true
 description = "Performance impact: None\n\nDescription: The Boat Item View Mod is a client-side only Minecraft Mod that allows the player to see the item held in their hand while riding in a boat."
 
