--- a/mods/creativecore.pw.toml
+++ b/mods/creativecore.pw.toml
@@ -1,6 +1,6 @@
 name = "CreativeCore"
 filename = "CreativeCore_FABRIC_v2.9.3_mc1.19.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/83XzFjou/CreativeCore_FABRIC_v2.9.3_mc1.19.2.jar"
