--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI"
 filename = "emi-0.7.3+1.19.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/RPPRwMBI/emi-0.7.3%2B1.19.2.jar"
