--- a/mods/konkrete.pw.toml
+++ b/mods/konkrete.pw.toml
@@ -1,6 +1,6 @@
 name = "Konkrete"
 filename = "konkrete_fabric_1.6.0_MC_1.19.1-1.19.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/J81TRJWm/versions/OJaX8Ruf/konkrete_fabric_1.6.0_MC_1.19.1-1.19.2.jar"
