--- a/mods/shulkerboxtooltip.pw.toml
+++ b/mods/shulkerboxtooltip.pw.toml
@@ -1,11 +1,16 @@
 name = "ShulkerBoxTooltip"
 filename = "shulkerboxtooltip-fabric-3.2.2+1.19.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/2M01OLQq/versions/luwoDnlv/shulkerboxtooltip-fabric-3.2.2%2B1.19.2.jar"
 hash-format = "sha1"
 hash = "7e720aa586dc76feb7296b1ca4c602b183c6222e"
+
+[option]
+optional = true
+default = true
+description = "Performance impact: None\n\nDescription: This mod allows you to see a preview window of a shulker box contents when hovering above it in an inventory by pressing shift."
 
 [update]
 [update.modrinth]
