--- a/mods/xaeros-minimap.pw.toml
+++ b/mods/xaeros-minimap.pw.toml
@@ -1,11 +1,16 @@
 name = "Xaero's Minimap"
 filename = "Xaeros_Minimap_23.3.3_Fabric_1.19.1.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
 hash = "0427baf7e4cb8a8542d4d7beea832c8022659272"
 mode = "metadata:curseforge"
+
+[option]
+optional = true
+default = true
+description = "Performance impact: Minimal\n\nDescription: Unlike many other minimap mods, Xaero's minimap keeps the aesthetic of vanilla Minecraft, which helps it be a more seamless addition to the game. It is also the first rotating square minimap for Minecraft. Among a wide variety of customization settings, there is an option for a circle-shaped minimap and a separate setting for locking the minimap's rotation (using a direction arrow instead)."
 
 [update]
 [update.curseforge]
