--- a/mods/craftpresence.pw.toml
+++ b/mods/craftpresence.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.0.0-rc.1+1.19.2.jar"
+filename = "CraftPresence-2.0.0-rc.2+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/HtS5TcBp/CraftPresence-2.0.0-rc.1%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/sr3oIkcy/CraftPresence-2.0.0-rc.2%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "dede70bb7d61ebe7a63ba8e4864616f28d170320"
+hash = "2d84439abe0d59f4a83c19b5558c13f2a05535d5"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "HtS5TcBp"
+version = "sr3oIkcy"
