--- a/mods/farmers-delight-fabric.pw.toml
+++ b/mods/farmers-delight-fabric.pw.toml
@@ -1,11 +1,11 @@
 name = "Farmer's Delight [Fabric]"
-filename = "farmers-delight-fabric-1.19.X-1.3.10-SNAPSHOT+nmc.jar"
+filename = "farmers-delight-fabric-1.19.X-1.3.10-SNAPSHOT.jar"
 side = "both"
 
 [download]
-url = "https://github.com/nekosmp/nsmp-farmers-delight-fabric/releases/download/1.3.10-SNAPSHOT%2Bnmc/farmers-delight-fabric-1.3.10-SNAPSHOT+nmc.jar"
+url = "https://github.com/nekosmp/farmers-delight-fabric/releases/download/1.19.2-1.3.10-SNAPSHOT/farmers-delight-fabric-1.3.10-SNAPSHOT.jar"
 hash-format = "sha1"
-hash = "82b74ce2eb05c9e03c9a89c6880b2697cdc8840e"
+hash = "cc48453fd456a628d6d8d22346054d1ece8d5ca7"
 
 #[update]
 #[update.modrinth]
