--- a/mods/shulkerboxtooltip.pw.toml
+++ b/mods/shulkerboxtooltip.pw.toml
@@ -1,6 +1,6 @@
 name = "ShulkerBoxTooltip"
 filename = "shulkerboxtooltip-fabric-3.2.2+1.19.2.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/2M01OLQq/versions/luwoDnlv/shulkerboxtooltip-fabric-3.2.2%2B1.19.2.jar"
