--- a/mods/worldedit.pw.toml
+++ b/mods/worldedit.pw.toml
@@ -1,11 +1,16 @@
 name = "WorldEdit"
 filename = "worldedit-mod-7.2.12.jar"
-side = "server"
+side = "both"
 
 [download]
 hash-format = "sha1"
 hash = "3583d0182a2a5c96d13434ed48ebb29742228174"
 mode = "metadata:curseforge"
+
+[option]
+optional = true
+default = true
+description = "Performance impact: None\n\nDescription: A Minecraft Map Editor... that runs in-game!"
 
 [update]
 [update.curseforge]
