--- a/mods/fancymenu.pw.toml
+++ b/mods/fancymenu.pw.toml
@@ -1,16 +1,16 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_2.14.3_MC_1.19-1.19.2.jar"
+filename = "fancymenu_fabric_2.14.4_MC_1.19-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/v0Bptzq4/fancymenu_fabric_2.14.3_MC_1.19-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/5pW7t6n3/fancymenu_fabric_2.14.4_MC_1.19-1.19.2.jar"
 hash-format = "sha1"
-hash = "99c319bcd016d2a89503cc018dd0c81478897602"
+hash = "7309b15d057de9504ae92412b4dfc426b06b4d10"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "v0Bptzq4"
+version = "5pW7t6n3"
 
 [option]
 optional = true
