--- a/mods/rei.pw.toml
+++ b/mods/rei.pw.toml
@@ -1,6 +1,6 @@
 name = "Roughly Enough Items (REI)"
 filename = "RoughlyEnoughItems-9.1.595.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/nfn13YXA/versions/AE6AqZDy/RoughlyEnoughItems-9.1.595.jar"
