--- a/mods/create-track-map.pw.toml
+++ b/mods/create-track-map.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Track Map"
-filename = "create-track-map-1.2+mc1.19.2-fabric.jar"
+filename = "create-track-map-1.3+mc1.19.2-fabric.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/gxoNIjg6/versions/J5Q4TzSK/create-track-map-1.2%2Bmc1.19.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/gxoNIjg6/versions/ozod5ftC/create-track-map-1.3%2Bmc1.19.2-fabric.jar"
 hash-format = "sha1"
-hash = "b41a7875a83ce04994b2ddb2ca4addc456b3deab"
+hash = "0f981ea4b43c2d24a9aaca06a71d39aea2139260"
 
 [update]
 [update.modrinth]
 mod-id = "gxoNIjg6"
-version = "J5Q4TzSK"
+version = "ozod5ftC"
