--- a/mods/opac-fabric-create-support.pw.toml
+++ b/mods/opac-fabric-create-support.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Support for Open Parties and Claims"
-filename = "opac-fabric-create-support-1.1.0.jar"
+filename = "opac-fabric-create-support-1.1.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/1.1.0/opac-fabric-create-support-1.1.0.jar"
+url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/Ho1YNNQK/opac-fabric-create-support-1.1.1.jar"
 hash-format = "sha1"
-hash = "fbb741c5526a0c1853d1eae489079c703fad35e4"
+hash = "368427e047807c4f52bf2082aa5c91cdbec8742d"
 
 [update]
 [update.modrinth]
 mod-id = "T4Cv5iZq"
-version = "JnCTHLbn"
+version = "Ho1YNNQK"
