--- a/mods/open-parties-and-claims.pw.toml
+++ b/mods/open-parties-and-claims.pw.toml
@@ -1,13 +1,13 @@
 name = "Open Parties and Claims"
-filename = "open-parties-and-claims-fabric-1.19.2-0.17.2.jar"
+filename = "open-parties-and-claims-fabric-1.19.2-0.17.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gF3BGWvG/versions/EDsbDuj1/open-parties-and-claims-fabric-1.19.2-0.17.2.jar"
+url = "https://cdn.modrinth.com/data/gF3BGWvG/versions/12IIUfD0/open-parties-and-claims-fabric-1.19.2-0.17.3.jar"
 hash-format = "sha1"
-hash = "87b70f91571a982ec800375588134f8292ba0708"
+hash = "d5a75582c28dfa6440497b7156dbf891378ecfb2"
 
 [update]
 [update.modrinth]
 mod-id = "gF3BGWvG"
-version = "EDsbDuj1"
+version = "12IIUfD0"
