--- a/mods/fancymenu.pw.toml
+++ b/mods/fancymenu.pw.toml
@@ -1,16 +1,16 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_2.14.5_MC_1.19-1.19.2.jar"
+filename = "fancymenu_fabric_2.14.6_MC_1.19-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/uGqBE4kI/fancymenu_fabric_2.14.5_MC_1.19-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/scxv9CGq/fancymenu_fabric_2.14.6_MC_1.19-1.19.2.jar"
 hash-format = "sha1"
-hash = "4965ba7c9ddd2b4fe8140e425255aecb254b6406"
+hash = "6eb467ab6f31ae0c1c56faea757282df650d76ca"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "uGqBE4kI"
+version = "scxv9CGq"
 
 [option]
 optional = true
