--- a/mods/fancymenu.pw.toml
+++ b/mods/fancymenu.pw.toml
@@ -1,16 +1,16 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_2.14.6_MC_1.19-1.19.2.jar"
+filename = "fancymenu_fabric_2.14.7_MC_1.19-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/scxv9CGq/fancymenu_fabric_2.14.6_MC_1.19-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/GQEnkgcO/fancymenu_fabric_2.14.7_MC_1.19-1.19.2.jar"
 hash-format = "sha1"
-hash = "6eb467ab6f31ae0c1c56faea757282df650d76ca"
+hash = "047343804f3d9c069277352d069ee2cab6f3d994"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "scxv9CGq"
+version = "GQEnkgcO"
 
 [option]
 optional = true
