--- a/mods/show-me-your-skin.pw.toml
+++ b/mods/show-me-your-skin.pw.toml
@@ -1,16 +1,16 @@
 name = "Show Me Your Skin!"
-filename = "show-me-your-skin-1.6.2+1.19.2.jar"
+filename = "show-me-your-skin-1.6.3+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bD7YqcA3/versions/uD2CtANM/show-me-your-skin-1.6.2%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/bD7YqcA3/versions/buUBth53/show-me-your-skin-1.6.3%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "a53cfb6ac1c0e66d148dc654ec672274325e6fb7"
+hash = "41d6a400d0d2f74592be1e17305a961e4e138df7"
 
 [update]
 [update.modrinth]
 mod-id = "bD7YqcA3"
-version = "uD2CtANM"
+version = "buUBth53"
 
 [option]
 optional = true
