--- a/mods/create-fabric.pw.toml
+++ b/mods/create-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Fabric"
-filename = "create-fabric-0.5.0.i-991+1.19.2.jar"
+filename = "create-fabric-0.5.0.i-1003+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/MpeKaF3n/create-fabric-0.5.0.i-991%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/js1edbtD/create-fabric-0.5.0.i-1003%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "9f6c509505b2ca7dae52cd3a03f5a18e58cd042c"
+hash = "05b61484818b6d9a80ce69acbf7de3f9db7812a9"
 
 [update]
 [update.modrinth]
 mod-id = "Xbc0uyRg"
-version = "MpeKaF3n"
+version = "js1edbtD"
