--- a/mods/craftpresence.pw.toml
+++ b/mods/craftpresence.pw.toml
@@ -1,18 +1,18 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.0.0-rc.2+1.19.2.jar"
+filename = "CraftPresence-2.0.0-rc.3+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/sr3oIkcy/CraftPresence-2.0.0-rc.2%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/AqEF8418/CraftPresence-2.0.0-rc.3%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "2d84439abe0d59f4a83c19b5558c13f2a05535d5"
-
-[option]
-optional = true
-default = true
-description = "Performance impact: None\n\nDescription: Completely Customize the way others see you play in Discord!"
+hash = "45b57968e88c16bbb9738c8a4ed45b6c96b1ead7"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "sr3oIkcy"
+version = "AqEF8418"
+
+[option]
+optional = true
+description = "Performance impact: None\n\nDescription: Completely Customize the way others see you play in Discord!"
+default = true
