--- a/mods/fabric-seasons.pw.toml
+++ b/mods/fabric-seasons.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Seasons"
-filename = "fabric-seasons-2.0+1.19.jar"
+filename = "fabric-seasons-2.0.2+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/KJe6y9Eu/versions/UBlv1O6X/fabric-seasons-2.0%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/KJe6y9Eu/versions/UYBTrmgB/fabric-seasons-2.0.2%2B1.19.jar"
 hash-format = "sha1"
-hash = "6d72f0706c00b15cdce7e5f691f19577d41a7520"
+hash = "37236f81c0811653e2630e53cb115c7e63d0e49e"
 
 [update]
 [update.modrinth]
 mod-id = "KJe6y9Eu"
-version = "UBlv1O6X"
+version = "UYBTrmgB"
