--- a/mods/rightclickharvest.pw.toml
+++ b/mods/rightclickharvest.pw.toml
@@ -1,13 +1,13 @@
 name = "RightClickHarvest"
-filename = "right-click-harvest-3.1.0+1.19-1.19.2.jar"
+filename = "right-click-harvest-3.1.1+1.19-1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Cnejf5xM/versions/SC8X8AQr/right-click-harvest-3.1.0%2B1.19-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Cnejf5xM/versions/T4fgYlvd/right-click-harvest-3.1.1%2B1.19-1.19.2.jar"
 hash-format = "sha1"
-hash = "c3514363f8f828adf8ab06f9de04c18c564a0b45"
+hash = "3aa441f87789f63f466b318e8801dfa0689e6ae9"
 
 [update]
 [update.modrinth]
 mod-id = "Cnejf5xM"
-version = "SC8X8AQr"
+version = "T4fgYlvd"
