--- a/mods/rightclickharvest.pw.toml
+++ b/mods/rightclickharvest.pw.toml
@@ -1,13 +1,13 @@
 name = "RightClickHarvest"
-filename = "right-click-harvest-3.1.1+1.19-1.19.2.jar"
+filename = "right-click-harvest-3.2.2+1.19.x-1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Cnejf5xM/versions/T4fgYlvd/right-click-harvest-3.1.1%2B1.19-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Cnejf5xM/versions/YiwK4aDu/right-click-harvest-3.2.2%2B1.19.x-1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "3aa441f87789f63f466b318e8801dfa0689e6ae9"
+hash = "0f100ed9b43f4647f964d8becd6d56c09adf9fa8"
 
 [update]
 [update.modrinth]
 mod-id = "Cnejf5xM"
-version = "T4fgYlvd"
+version = "YiwK4aDu"
