--- a/mods/corgilib.pw.toml
+++ b/mods/corgilib.pw.toml
@@ -1,13 +1,13 @@
 name = "CorgiLib"
-filename = "CorgiLib-fabric-1.19.2-1.0.0.32.jar"
+filename = "CorgiLib-fabric-1.19.2-1.0.0.34.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ziOp6EO8/versions/VLaSLzb2/CorgiLib-fabric-1.19.2-1.0.0.32.jar"
+url = "https://cdn.modrinth.com/data/ziOp6EO8/versions/HaZfKDxj/CorgiLib-fabric-1.19.2-1.0.0.34.jar"
 hash-format = "sha1"
-hash = "cee3b865499c928363ae892029772cc174e4ac0d"
+hash = "9afa2d59e20a5e19c3a926e1645a890dec0c3475"
 
 [update]
 [update.modrinth]
 mod-id = "ziOp6EO8"
-version = "VLaSLzb2"
+version = "HaZfKDxj"
