--- a/mods/create-steam-n-rails.pw.toml
+++ b/mods/create-steam-n-rails.pw.toml
@@ -1,13 +1,13 @@
-name = "Create: Steam 'n' Rails"
+name = "Create: Steam n’ Rails"
 filename = "Steam_Rails-1.2.6+fabric-mc1.19.2.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/ZzjhlDgM/versions/VXh9CeGE/Steam_Rails-1.2.6%2Bfabric-mc1.19.2.jar"
 hash-format = "sha1"
 hash = "47191eae23dd82fe72baeba179705f7f0777a9a9"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4512538
-project-id = 688231
+[update.modrinth]
+mod-id = "ZzjhlDgM"
+version = "VXh9CeGE"
