--- a/mods/create-track-map.pw.toml
+++ b/mods/create-track-map.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Track Map"
-filename = "create-track-map-1.3+mc1.19.2-fabric.jar"
+filename = "create-track-map-1.4+mc1.19.2-fabric-create-0.5.0.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/gxoNIjg6/versions/ozod5ftC/create-track-map-1.3%2Bmc1.19.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/gxoNIjg6/versions/oaT77dVy/create-track-map-1.4%2Bmc1.19.2-fabric-create-0.5.0.jar"
 hash-format = "sha1"
-hash = "0f981ea4b43c2d24a9aaca06a71d39aea2139260"
+hash = "afdb426fb8ee838059c5ebf24be6990092c65323"
 
 [update]
 [update.modrinth]
 mod-id = "gxoNIjg6"
-version = "ozod5ftC"
+version = "oaT77dVy"
