--- a/mods/creativecore.pw.toml
+++ b/mods/creativecore.pw.toml
@@ -1,13 +1,13 @@
 name = "CreativeCore"
-filename = "CreativeCore_FABRIC_v2.9.3_mc1.19.2.jar"
+filename = "CreativeCore_FABRIC_v2.9.4_mc1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/83XzFjou/CreativeCore_FABRIC_v2.9.3_mc1.19.2.jar"
+url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/ug21xEGt/CreativeCore_FABRIC_v2.9.4_mc1.19.2.jar"
 hash-format = "sha1"
-hash = "7bc07082a7b53d680331e865abbf6e43fa91524e"
+hash = "2107ce92262aa68771168b67fe180bf8336c214c"
 
 [update]
 [update.modrinth]
 mod-id = "OsZiaDHq"
-version = "83XzFjou"
+version = "ug21xEGt"
