--- a/mods/enchanted-vertical-slabs.pw.toml
+++ b/mods/enchanted-vertical-slabs.pw.toml
@@ -1,13 +1,13 @@
 name = "Enchanted Vertical Slabs"
-filename = "MC-1.19-enchanted-vertical-slabs-1.6.2.jar"
+filename = "mc1.19-enchanted-vertical-slabs-1.8.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/TG1cHkRf/versions/SCe3H5wq/MC-1.19-enchanted-vertical-slabs-1.6.2.jar"
+url = "https://cdn.modrinth.com/data/TG1cHkRf/versions/PUgytpqh/mc1.19-enchanted-vertical-slabs-1.8.jar"
 hash-format = "sha1"
-hash = "e283841274225e94d93c4509d71a4492ec648513"
+hash = "114102698797259dd994d60e1d384f55df23c3ec"
 
 [update]
 [update.modrinth]
 mod-id = "TG1cHkRf"
-version = "SCe3H5wq"
+version = "PUgytpqh"
