--- a/mods/modelfix.pw.toml
+++ b/mods/modelfix.pw.toml
@@ -1,11 +1,11 @@
 name = "Model Gap Fix"
-filename = "modelfix-1.8-fabric.jar"
+filename = "modelfix-1.8-fabric (1).jar"
 side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/QdG47OkI/versions/7ainrOrH/modelfix-1.8-fabric%20%281%29.jar"
 hash-format = "sha1"
 hash = "2702ce386bb0e84ea7bc5cac86c314e38389fc89"
-mode = "metadata:curseforge"
 
 [option]
 optional = true
@@ -13,6 +13,6 @@ default = true
 description = "Performance impact: None\n\nDescription: Fixes gaps in Block Models and Item Models"
 
 [update]
-[update.curseforge]
-file-id = 4024854
-project-id = 676136
+[update.modrinth]
+mod-id = "QdG47OkI"
+version = "7ainrOrH"
