--- a/mods/open-parties-and-claims.pw.toml
+++ b/mods/open-parties-and-claims.pw.toml
@@ -1,13 +1,13 @@
 name = "Open Parties and Claims"
-filename = "open-parties-and-claims-fabric-1.19.2-0.17.3.jar"
+filename = "open-parties-and-claims-fabric-1.19.2-0.17.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gF3BGWvG/versions/12IIUfD0/open-parties-and-claims-fabric-1.19.2-0.17.3.jar"
+url = "https://cdn.modrinth.com/data/gF3BGWvG/versions/Al4jRLC7/open-parties-and-claims-fabric-1.19.2-0.17.5.jar"
 hash-format = "sha1"
-hash = "d5a75582c28dfa6440497b7156dbf891378ecfb2"
+hash = "73156c326e5f30eaa1abc3ee72d3f92bc95337c7"
 
 [update]
 [update.modrinth]
 mod-id = "gF3BGWvG"
-version = "12IIUfD0"
+version = "Al4jRLC7"
