--- a/mods/plasmo-voice.pw.toml
+++ b/mods/plasmo-voice.pw.toml
@@ -1,18 +1,13 @@
 name = "Plasmo Voice"
-filename = "plasmovoice-fabric-1.19.2-2.0.3.jar"
+filename = "plasmovoice-fabric-1.19.2-2.0.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/CPTO5fua/plasmovoice-fabric-1.19.2-2.0.3.jar"
+url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/npxLATPQ/plasmovoice-fabric-1.19.2-2.0.5.jar"
 hash-format = "sha1"
-hash = "5e70b54af60c63aca18bddef37fb5eb93f085a91"
-
-[option]
-optional = true
-default = true
-description = "Performance impact: Minor\n\nDescription: A proximity voice chat mod with audio positioning and lots of features"
+hash = "224a07c5496e8e3dd7d6cab95d699b602fc755c3"
 
 [update]
 [update.modrinth]
 mod-id = "1bZhdhsH"
-version = "CPTO5fua"
+version = "npxLATPQ"
