--- a/mods/puzzles-lib.pw.toml
+++ b/mods/puzzles-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "Puzzles Lib"
-filename = "PuzzlesLib-v4.4.0-1.19.2-Fabric.jar"
+filename = "PuzzlesLib-v4.4.2-1.19.2-Fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QAGBst4M/versions/LSUMYLnt/PuzzlesLib-v4.4.0-1.19.2-Fabric.jar"
+url = "https://cdn.modrinth.com/data/QAGBst4M/versions/bEmPd1vO/PuzzlesLib-v4.4.2-1.19.2-Fabric.jar"
 hash-format = "sha1"
-hash = "7c1cb735e94b6f16ff5abd896ccef310a96342e0"
+hash = "27cef8e16d3913b2b26648c2c19bf8ddc8401853"
 
 [update]
 [update.modrinth]
 mod-id = "QAGBst4M"
-version = "LSUMYLnt"
+version = "bEmPd1vO"
