--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-fabric-5.15.5.jar"
+filename = "wthit-fabric-5.16.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/dYldQnGg/wthit-fabric-5.15.5.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/Lv3CXyzs/wthit-fabric-5.16.2.jar"
 hash-format = "sha1"
-hash = "460113c0a9817d8fff413468dddb1c0c7f89ee04"
+hash = "337ae56f533e04987ace28c81610ffb22f78d1d9"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "dYldQnGg"
+version = "Lv3CXyzs"
