--- a/mods/plasmo-voice.pw.toml
+++ b/mods/plasmo-voice.pw.toml
@@ -1,13 +1,13 @@
 name = "Plasmo Voice"
-filename = "plasmovoice-fabric-1.19.2-2.0.5.jar"
+filename = "plasmovoice-fabric-1.19.2-2.0.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/npxLATPQ/plasmovoice-fabric-1.19.2-2.0.5.jar"
+url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/s9MWFHzd/plasmovoice-fabric-1.19.2-2.0.6.jar"
 hash-format = "sha1"
-hash = "224a07c5496e8e3dd7d6cab95d699b602fc755c3"
+hash = "87693399d912ecb46e7d2b8ea73b93023ec38419"
 
 [update]
 [update.modrinth]
 mod-id = "1bZhdhsH"
-version = "npxLATPQ"
+version = "s9MWFHzd"
