--- a/mods/biomesyougo.pw.toml
+++ b/mods/biomesyougo.pw.toml
@@ -1,13 +1,13 @@
 name = "Oh The Biomes You'll Go"
-filename = "Oh_The_Biomes_You'll_Go-fabric-1.19.2-2.0.1.3.jar"
+filename = "Oh_The_Biomes_You'll_Go-fabric-1.19.2-2.0.1.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/uE1WpIAk/versions/lgDf4z7U/Oh_The_Biomes_You%27ll_Go-fabric-1.19.2-2.0.1.3.jar"
+url = "https://cdn.modrinth.com/data/uE1WpIAk/versions/Cieo7mfA/Oh_The_Biomes_You%27ll_Go-fabric-1.19.2-2.0.1.4.jar"
 hash-format = "sha1"
-hash = "d5ab2be8672b210e3c5b9ab9c4310fbae07aa78c"
+hash = "fc96832957feb0a12c1babd6b251b672eb15d4ac"
 
 [update]
 [update.modrinth]
 mod-id = "uE1WpIAk"
-version = "lgDf4z7U"
+version = "Cieo7mfA"
