--- a/mods/collective.pw.toml
+++ b/mods/collective.pw.toml
@@ -1,13 +1,13 @@
 name = "Collective"
-filename = "collective-1.19.2-6.61.jar"
+filename = "collective-1.19.2-6.62.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/GiHLPR1f/collective-1.19.2-6.61.jar"
+url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/aBtrJprE/collective-1.19.2-6.62.jar"
 hash-format = "sha1"
-hash = "3b3f9df268a902cdf4b5e30dfd35bc2b93da18da"
+hash = "c51364169852fbbbfde2a97530c1de44621940a2"
 
 [update]
 [update.modrinth]
 mod-id = "e0M1UDsY"
-version = "GiHLPR1f"
+version = "aBtrJprE"
