--- a/mods/cccbridge.pw.toml
+++ b/mods/cccbridge.pw.toml
@@ -1,13 +1,13 @@
 name = "CC:C Bridge"
-filename = "cccbridge-1.4.1-fabric.jar"
+filename = "cccbridge-mc1.19.2-fabric-v1.5.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fXt291FO/versions/JWA3Ln0O/cccbridge-1.4.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/fXt291FO/versions/ZQr9o4rM/cccbridge-mc1.19.2-fabric-v1.5.1.jar"
 hash-format = "sha1"
-hash = "1bf409942a4f4cd821f5244c71e1e86dd7b0f23f"
+hash = "831a08d3861bc24b49e9dda71f07a7bdc83ab322"
 
 [update]
 [update.modrinth]
 mod-id = "fXt291FO"
-version = "JWA3Ln0O"
+version = "ZQr9o4rM"
