--- a/mods/craftpresence.pw.toml
+++ b/mods/craftpresence.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.1.0+1.19.2.jar"
+filename = "CraftPresence-2.1.2+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/GNAeC9qJ/CraftPresence-2.1.0%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/uZyXbq78/CraftPresence-2.1.2%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "355f060c48d1e53629b793b83c27f9f7c3c13ea8"
+hash = "8fa3119a3095724157e84facc88edbdd51b118f8"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "GNAeC9qJ"
+version = "uZyXbq78"
