--- a/mods/opac-fabric-create-support.pw.toml
+++ b/mods/opac-fabric-create-support.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Support for Open Parties and Claims"
-filename = "opac-fabric-create-support-1.1.1.jar"
+filename = "opac-fabric-create-support-1.3.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/Ho1YNNQK/opac-fabric-create-support-1.1.1.jar"
+url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/UmKySKmr/opac-fabric-create-support-1.3.0.jar"
 hash-format = "sha1"
-hash = "368427e047807c4f52bf2082aa5c91cdbec8742d"
+hash = "52fefcbecc906e83d05e6a6788e689bab01c3da0"
 
 [update]
 [update.modrinth]
 mod-id = "T4Cv5iZq"
-version = "Ho1YNNQK"
+version = "UmKySKmr"
