--- a/mods/jamlib.pw.toml
+++ b/mods/jamlib.pw.toml
@@ -1,13 +1,13 @@
 name = "JamLib"
-filename = "jamlib-0.6.0+1.19.jar"
+filename = "jamlib-0.6.1+1.19-1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/IYY9Siz8/versions/MSmq1ClL/jamlib-0.6.0%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/IYY9Siz8/versions/vlsKDiFO/jamlib-0.6.1%2B1.19-1.19.2.jar"
 hash-format = "sha1"
-hash = "3b5034c5d85bf322fb33747f9a46cc3adc941a9b"
+hash = "2ec3a1b3669457f9c6933180c6dd0121619277e3"
 
 [update]
 [update.modrinth]
 mod-id = "IYY9Siz8"
-version = "MSmq1ClL"
+version = "vlsKDiFO"
