--- a/mods/axes-are-weapons.pw.toml
+++ b/mods/axes-are-weapons.pw.toml
@@ -1,13 +1,13 @@
 name = "Axes Are Weapons"
-filename = "AxesAreWeapons-1.6.5-fabric-1.17.1.jar"
+filename = "AxesAreWeapons-1.7.1-fabric-1.17.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1jvt7RTc/versions/NHtMg4u7/AxesAreWeapons-1.6.5-fabric-1.17.1.jar"
+url = "https://cdn.modrinth.com/data/1jvt7RTc/versions/uOaZVop7/AxesAreWeapons-1.7.1-fabric-1.17.1.jar"
 hash-format = "sha1"
-hash = "f7a5c3464723e2d0c5e63fee9c2d326662fab5cc"
+hash = "c18bde8f46b6dbc67d8d361f42097a59be47d334"
 
 [update]
 [update.modrinth]
 mod-id = "1jvt7RTc"
-version = "NHtMg4u7"
+version = "uOaZVop7"
