--- a/mods/craftpresence.pw.toml
+++ b/mods/craftpresence.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.1.2+1.19.2.jar"
+filename = "CraftPresence-2.2.1+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/uZyXbq78/CraftPresence-2.1.2%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/otyGtU7z/CraftPresence-2.2.1%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "8fa3119a3095724157e84facc88edbdd51b118f8"
+hash = "17c49e2eb963e2994eb6d5939857a540ef11888f"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "uZyXbq78"
+version = "otyGtU7z"
