--- a/mods/fabric-seasons.pw.toml
+++ b/mods/fabric-seasons.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Seasons"
-filename = "fabric-seasons-2.2.1+1.19.jar"
+filename = "fabric-seasons-2.3+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/KJe6y9Eu/versions/rLlocL2I/fabric-seasons-2.2.1%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/KJe6y9Eu/versions/5TNKN9aR/fabric-seasons-2.3%2B1.19.jar"
 hash-format = "sha1"
-hash = "c1127d6de475324f8290935530c3612af05e084c"
+hash = "b00a0cd1ef4706c2fc4c99839722289949778c26"
 
 [update]
 [update.modrinth]
 mod-id = "KJe6y9Eu"
-version = "rLlocL2I"
+version = "5TNKN9aR"
