--- a/mods/fancymenu.pw.toml
+++ b/mods/fancymenu.pw.toml
@@ -1,16 +1,16 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_2.14.7_MC_1.19-1.19.2.jar"
+filename = "fancymenu_fabric_2.14.9_MC_1.19-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/GQEnkgcO/fancymenu_fabric_2.14.7_MC_1.19-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/Y9wphxc2/fancymenu_fabric_2.14.9_MC_1.19-1.19.2.jar"
 hash-format = "sha1"
-hash = "047343804f3d9c069277352d069ee2cab6f3d994"
+hash = "155d6ba930b65e5baaf87c0c4e507656b23a46d7"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "GQEnkgcO"
+version = "Y9wphxc2"
 
 [option]
 optional = true
