--- a/mods/figura.pw.toml
+++ b/mods/figura.pw.toml
@@ -1,13 +1,13 @@
 name = "Figura"
-filename = "figura-0.1.0+1.19.2.jar"
+filename = "figura-0.1.2+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/B3csO4KD/versions/SpFtF7VS/figura-0.1.0%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/s9gIPDom/versions/68pcF68H/figura-0.1.2%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "f1b1981bf1b4d5063ac392f9f31fd1a5ad35bd1e"
+hash = "d866ddea9f458b0c4016f5c68b91507880ed774c"
 
 [update]
 [update.modrinth]
-mod-id = "B3csO4KD"
-version = "SpFtF7VS"
+mod-id = "s9gIPDom"
+version = "68pcF68H"
