--- a/mods/pehkui.pw.toml
+++ b/mods/pehkui.pw.toml
@@ -1,13 +1,13 @@
 name = "Pehkui"
-filename = "Pehkui-3.7.6+1.14.4-1.20.1.jar"
+filename = "Pehkui-3.7.8+1.14.4-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/t5W7Jfwy/versions/hYzQBiXB/Pehkui-3.7.6%2B1.14.4-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/t5W7Jfwy/versions/ooQsxSVg/Pehkui-3.7.8%2B1.14.4-1.20.1.jar"
 hash-format = "sha1"
-hash = "66fac4600d0d13c53b82859e01869db1862a82a5"
+hash = "93df5763a38f865042ff7b56a4ce4eea26486944"
 
 [update]
 [update.modrinth]
 mod-id = "t5W7Jfwy"
-version = "hYzQBiXB"
+version = "ooQsxSVg"
