--- a/mods/rei.pw.toml
+++ b/mods/rei.pw.toml
@@ -1,13 +1,13 @@
 name = "Roughly Enough Items (REI)"
-filename = "RoughlyEnoughItems-9.1.619.jar"
+filename = "RoughlyEnoughItems-9.1.643.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nfn13YXA/versions/6vWZi3Ug/RoughlyEnoughItems-9.1.619.jar"
+url = "https://cdn.modrinth.com/data/nfn13YXA/versions/FSPvmAAy/RoughlyEnoughItems-9.1.643.jar"
 hash-format = "sha1"
-hash = "cbf8dbe7237863ac4ad3ff10dbdc67382e91d2c9"
+hash = "5289cc7379cab278128cf98e2bfb9fa04faf337f"
 
 [update]
 [update.modrinth]
 mod-id = "nfn13YXA"
-version = "6vWZi3Ug"
+version = "FSPvmAAy"
