--- a/mods/vivecraft.pw.toml
+++ b/mods/vivecraft.pw.toml
@@ -1,13 +1,13 @@
 name = "Vivecraft"
-filename = "vivecraft-1.19.2-0.0.15-fabric.jar"
+filename = "vivecraft-1.19.2-1.0.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/wGoQDPN5/versions/4hA4xhWQ/vivecraft-1.19.2-0.0.15-fabric.jar"
+url = "https://cdn.modrinth.com/data/wGoQDPN5/versions/KtOSPp6N/vivecraft-1.19.2-1.0.1-fabric.jar"
 hash-format = "sha1"
-hash = "b48f5552cfe31eeab1e30cc9e89d9e7200be485a"
+hash = "de01be77108f943d1e687e8c39bc939ae13f12e0"
 
 [update]
 [update.modrinth]
 mod-id = "wGoQDPN5"
-version = "4hA4xhWQ"
+version = "KtOSPp6N"
