--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-fabric-5.16.2.jar"
+filename = "wthit-fabric-5.18.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/Lv3CXyzs/wthit-fabric-5.16.2.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/wHrhmIqr/wthit-fabric-5.18.1.jar"
 hash-format = "sha1"
-hash = "337ae56f533e04987ace28c81610ffb22f78d1d9"
+hash = "772884b0c072821a0d48b72ef763e4ef365df6f1"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "Lv3CXyzs"
+version = "wHrhmIqr"
