Move stuff around

--- a/index.toml
+++ b/index.toml
@@ -1,9 +1,13 @@
 hash-format = "sha256"
 
 [[files]]
-file = "modpack/mods/create-fabric-sodium-fix.pw.toml"
+file = "mods/create-steam-n-rails.pw.toml"
 metafile = true
 
 [[files]]
-file = "modpack/mods/fabric-api.pw.toml"
+file = "mods/create-fabric-sodium-fix.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/fabric-api.pw.toml"
 metafile = true
